<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		slide_2
	 *	@date 		Saturday 02nd of March 2024 03:01:07 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/slide_2" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__slide_2"
				android:background="@drawable/_bg__slide_2_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="428dp"
				android:layout_height="926dp" />


			<TextView android:id="@+id/log_in"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="20sp"
				android:textColor="@color/log_in_color"
				android:layout_marginLeft="97dp"
				android:layout_marginTop="83dp"
				android:layout_width="66dp"
				android:layout_height="26dp"
				android:text="@string/log_in_string"
				 />

			<TextView android:id="@+id/sign_up"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="20sp"
				android:textColor="@color/sign_up_color"
				android:layout_marginLeft="253dp"
				android:layout_marginTop="83dp"
				android:layout_width="83dp"
				android:layout_height="26dp"
				android:text="@string/sign_up_string"
				 />

			<ImageView android:id="@+id/line_1"
				android:src="@drawable/line_1"
				android:contentDescription="line_1"
				 android:layout_marginStart="42dp"
				android:layout_marginTop="106dp"
				android:layout_width="172dp"
				android:layout_height="3dp" />

			<TextView android:id="@+id/your_email"
				android:textStyle="bold"
				android:textSize="16sp"
				android:textColor="@color/your_email_color"
				android:layout_marginLeft="25dp"
				android:layout_marginTop="181dp"
				android:layout_width="91.6dp"
				android:layout_height="24.6dp"
				android:text="@string/your_email_string"
				 />

			<TextView android:id="@+id/password"
				android:textStyle="bold"
				android:textSize="16sp"
				android:textColor="@color/your_email_color"
				android:layout_marginLeft="25dp"
				android:layout_marginTop="281dp"
				android:layout_width="87.6dp"
				android:layout_height="24.6dp"
				android:text="@string/password_string"
				 />


			<TextView android:id="@+id/forgot_password_"
				android:textStyle="bold"
				android:textSize="16sp"
				android:textColor="@color/log_in_color"
				android:layout_marginLeft="270dp"
				android:layout_marginTop="377dp"
				android:layout_width="146.6dp"
				android:layout_height="24.6dp"
				android:text="@string/forgot_password__string"
				 />

			<TextView android:id="@+id/wrong_password"
				android:textStyle="bold"
				android:textSize="16sp"
				android:textColor="@color/sign_up_color"
				android:layout_marginLeft="26dp"
				android:layout_marginTop="377dp"
				android:layout_width="139.6dp"
				android:layout_height="24.6dp"
				android:text="@string/wrong_password_string"
				 />

			<TextView android:id="@+id/contact_dscodetech_com"
				android:textSize="16sp"
				android:textColor="@color/contact_dscodetech_com_color"
				android:layout_marginLeft="47dp"
				android:layout_marginTop="227dp"
				android:layout_width="222.6dp"
				android:layout_height="24.6dp"
				android:text="@string/contact_dscodetech_com_string"
				 />

			<View   android:id="@+id/rectangle_13"
				android:background="@drawable/rectangle_13_shape"
				 android:layout_marginStart="24dp"
				android:layout_marginTop="207dp"
				android:layout_width="376dp"
				android:layout_height="56dp" />

			<View   android:id="@+id/rectangle_16"
				android:background="@drawable/rectangle_16_shape"
				 android:layout_marginStart="24dp"
				android:layout_marginTop="557dp"
				android:layout_width="376dp"
				android:layout_height="56dp" />

			<View   android:id="@+id/rectangle_17"
				android:background="@drawable/rectangle_17_shape"
				 android:layout_marginStart="24dp"
				android:layout_marginTop="629dp"
				android:layout_width="376dp"
				android:layout_height="56dp" />

			<View   android:id="@+id/rectangle_14"
				android:background="@drawable/rectangle_17_shape"
				 android:layout_marginStart="24dp"
				android:layout_marginTop="307dp"
				android:layout_width="376dp"
				android:layout_height="56dp" />


			<RelativeLayout android:id="@+id/fi_rr_eye_crossed"
				android:layout_marginTop="327dp"
				android:layout_marginStart="354dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__fi_rr_eye_crossed_ek1"
					android:background="@drawable/_bg__fi_rr_eye_crossed_ek1_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="20dp"
					android:layout_height="20dp" />

				<ImageView android:id="@+id/vector"
					android:src="@drawable/vector"
					android:contentDescription="vector"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0.85dp"
					android:layout_width="20dp"
					android:layout_height="18.33dp" />

			</RelativeLayout>

			<View   android:id="@+id/rectangle_15"
				android:background="@drawable/rectangle_15_shape"
				 android:layout_marginStart="26dp"
				android:layout_marginTop="415dp"
				android:layout_width="376dp"
				android:layout_height="56dp" />

			<TextView android:id="@+id/continuee"
				android:textStyle="bold"
				android:textSize="16sp"
				android:textColor="@color/_bg__slide_2_color"
				android:layout_marginLeft="179dp"
				android:layout_marginTop="433dp"
				android:layout_width="83.6dp"
				android:layout_height="24.6dp"
				android:text="@string/continue_string"
				 />

			<TextView android:id="@+id/or"
				android:textStyle="bold"
				android:textSize="16sp"
				android:textColor="@color/or_color"
				android:layout_marginLeft="204dp"
				android:layout_marginTop="504dp"
				android:layout_width="33.6dp"
				android:layout_height="24.6dp"
				android:text="@string/or_string"
				 />

			<ImageView android:id="@+id/line_2"
				android:src="@drawable/line_2"
				android:contentDescription="line_2"
				 android:layout_marginStart="238.4dp"
				android:layout_marginTop="512.4dp"
				android:layout_width="98dp"
				android:layout_height="1.6dp" />

			<ImageView android:id="@+id/line_3"
				android:src="@drawable/line_3"
				android:contentDescription="line_3"
				 android:layout_marginStart="88.4dp"
				android:layout_marginTop="512.4dp"
				android:layout_width="98dp"
				android:layout_height="1.6dp" />


			<RelativeLayout android:id="@+id/group_1"
				android:layout_marginTop="575dp"
				android:layout_marginStart="139dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView android:id="@+id/login_with_apple"
					android:textStyle="bold"
					android:textSize="16sp"
					android:textColor="@color/your_email_color"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="2dp"
					android:layout_width="137.6dp"
					android:layout_height="24.6dp"
					android:text="@string/login_with_apple_string"
					 />

				<ImageView android:id="@+id/pngwing_1"
					android:src="@drawable/pngwing_1"
					android:contentDescription="pngwing_1"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="18dp"
					android:layout_height="23dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/group_2"
				android:layout_marginTop="647dp"
				android:layout_marginStart="132dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>


				<TextView android:id="@+id/login_with_google"
					android:textStyle="bold"
					android:textSize="16sp"
					android:textColor="@color/your_email_color"
					android:layout_marginLeft="32dp"
					android:layout_marginTop="2dp"
					android:layout_width="146.6dp"
					android:layout_height="24.6dp"
					android:text="@string/login_with_google_string"
					 />

				<ImageView android:id="@+id/pngwing_2"
					android:src="@drawable/pngwing_2"
					android:contentDescription="pngwing_2"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="24dp"
					android:layout_height="24dp" />

			</RelativeLayout>


<!--			<RelativeLayout android:id="@+id/group_3"-->
<!--				android:layout_marginTop="334dp"-->
<!--				android:layout_marginStart="47dp"-->
<!--				android:layout_width="wrap_content"-->
<!--				android:layout_height="wrap_content"-->
<!--				>-->

<!--				<View   android:id="@+id/_bg__group_3_ek1"-->
<!--					android:background="@drawable/_bg__group_3_ek1_shape"-->
<!--					 android:layout_marginStart="-47dp"-->
<!--					android:layout_marginTop="-334dp"-->
<!--					android:layout_width="116dp"-->
<!--					android:layout_height="6dp" />-->

<!--				<View   android:id="@+id/ellipse_1"-->
<!--					android:background="@drawable/ellipse_1_shape"-->
<!--					 android:layout_marginStart="0dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:layout_width="6dp"-->
<!--					android:layout_height="6dp" />-->

<!--				<View   android:id="@+id/ellipse_2"-->
<!--					android:background="@drawable/ellipse_2_shape"-->
<!--					 android:layout_marginStart="11dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:layout_width="6dp"-->
<!--					android:layout_height="6dp" />-->

<!--				<View   android:id="@+id/ellipse_3"-->
<!--					android:background="@drawable/ellipse_3_shape"-->
<!--					 android:layout_marginStart="22dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:layout_width="6dp"-->
<!--					android:layout_height="6dp" />-->

<!--				<View   android:id="@+id/ellipse_4"-->
<!--					android:background="@drawable/ellipse_4_shape"-->
<!--					 android:layout_marginStart="33dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:layout_width="6dp"-->
<!--					android:layout_height="6dp" />-->

<!--				<View   android:id="@+id/ellipse_5"-->
<!--					android:background="@drawable/ellipse_5_shape"-->
<!--					 android:layout_marginStart="44dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:layout_width="6dp"-->
<!--					android:layout_height="6dp" />-->

<!--				<View   android:id="@+id/ellipse_6"-->
<!--					android:background="@drawable/ellipse_6_shape"-->
<!--					 android:layout_marginStart="55dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:layout_width="6dp"-->
<!--					android:layout_height="6dp" />-->

<!--				<View   android:id="@+id/ellipse_7"-->
<!--					android:background="@drawable/ellipse_7_shape"-->
<!--					 android:layout_marginStart="66dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:layout_width="6dp"-->
<!--					android:layout_height="6dp" />-->

<!--				<View   android:id="@+id/ellipse_8"-->
<!--					android:background="@drawable/ellipse_8_shape"-->
<!--					 android:layout_marginStart="77dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:layout_width="6dp"-->
<!--					android:layout_height="6dp" />-->

<!--				<View   android:id="@+id/ellipse_9"-->
<!--					android:background="@drawable/ellipse_9_shape"-->
<!--					 android:layout_marginStart="88dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:layout_width="6dp"-->
<!--					android:layout_height="6dp" />-->

<!--				<View   android:id="@+id/ellipse_10"-->
<!--					android:background="@drawable/ellipse_10_shape"-->
<!--					 android:layout_marginStart="99dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:layout_width="6dp"-->
<!--					android:layout_height="6dp" />-->

<!--				<View   android:id="@+id/ellipse_11"-->
<!--					android:background="@drawable/ellipse_11_shape"-->
<!--					 android:layout_marginStart="110dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:layout_width="6dp"-->
<!--					android:layout_height="6dp" />-->

<!--			</RelativeLayout>-->

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>